# prompts

./: .autogitrc.yml  .gitignore  .prettierignore  .prettierrc.js  .prettierrc.json  10.verbs.instructions.md  14.verbs.instructions.md  18.secondary.verbs.instructions.md  60.error-messages.instructions.md  README.md  __.x.md  jest.config.mjs  package.json  prompts.code-workspace  pyproject.toml  tsconfig.base.json  tsconfig.json
.obsidian/: community-plugins.json
_tasks/: new deploy script.md
chatgpt/: Return lists of different Unicode charac.md  scratching messages.md
copilot/: 01.priority.instructions.md  02.sets.instructions.md  04.comments.instructions.md  10.verbs.instructions.md  12.active.verbs.instructions.md  12.requirements.verbs.instructions.md  14.restrictions.verbs.instructions.md  16.information.verbs.instructions.md  18.secondary.verbs.instructions.md  20.apply-only.instructions.md  20.only-apply.instructions.md  21.forbidden.instructions.md  21.reproduction.instructions.md  50.python.instructions.md  60.error-messages.instructions.md  __.x.md  _scopes.js  _scopes.ts
copilot.vault/: Untitled 2.md  Vault.md  copilot Plan mode.md
copilot.vault/.obsidian/: appearance.json  (+2 more)
searches/: _b_MUST_NEVER_ONLY_MAY_ASSUME_IGNORE_CONSIDER_DOUBT_MODIFY_READ_BROWSE_SEARCH_b_.code-search
src/: deploy.ts  tsconfig.json
styles/: _alternating.scss  _bc.scss  _icon-assignment.scss  _icon-placement.scss  _images.scss  _layout.scss  _tab-colors.scss  main.scss  styling.scss
test/: tsconfig.json
tools/: deploy.ts  guess-vscode.ts  prepare-system.ts
(+232 files in other folders)
