[project]
name = "prompts"
version = "0.1.0"
description = ""
authors = [{ name = "GregRos", email = "life.gregr@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[tool.pyright]
typeCheckingMode = "standard"

autoImportCompletions = true
autoIndent = true
diagnosticMode = "workspace"
reportUnusedImport = false
ignore = [
  "**/Lib/*.py",
  "**/site-packages/**",
  "**/.venv/**/*",
  "**/dist/**/*",
  "**/*.pyi",
]
exclude = ["**/site-packages/**", "**/.venv/**/*", "**/dist/**/*", "**/*.pyi"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
